[workspace]
resolver = "2"
members = ["programs/*", "client"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "^1.16"
spl-token-2022 = { version = "0.9.0", default-features = false }
spl-math = "0.2.0"
