[workspace]
resolver = "2"
members = ["programs/*", "client"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", features = ["memo"] }
solana-program = "2.1.0"
spl-token-2022 = { version = "6.0.0", features = ["zk-ops"] }
spl-math = "0.3.0"
