[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium CPMM with Token2022 support"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["memo"] }
solana-program = "2.2.1"
spl-token-2022 = { git = "https://github.com/hamkj7hpo/token-2022.git", rev = "d01df1cb477ce0f788996bd0df745ae7f01262ef" }
spl-math = "0.3.0"
spl-pod = "0.5.1"
arrayref = "0.3.6"
uint = "0.9.5"
bytemuck = { version = "1.18.0", features = ["derive"] }
bincode = "1.3.3"
zeroize = "1.3.0"

[dev-dependencies]
# Empty to avoid transitive conflicts

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
spl-discriminator = "0.4.1"
spl-type-length-value = { version = "0.7.0" }
spl-token-group-interface = { version = "0.2.4" }
spl-token-metadata-interface = { version = "0.3.4" }
spl-transfer-hook-interface = { version = "0.6.4" }
spl-tlv-account-resolution = { version = "=0.6.4" }
