[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium CPMM with Token2022 support"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/hamkj7hpo/anchor.git", rev = "dbfdadca848af65a4bd8b48b777a30ca9af1430d", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/hamkj7hpo/anchor.git", rev = "5cf7738000adea3e58cae5fd99dd66ea045a9c31", features = ["memo"] }
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", rev = "5208a7870826307290c30b7d80768f40267433a1" }
spl-token-2022 = { git = "https://github.com/hamkj7hpo/token-2022.git", rev = "2099caa13da83a3c3f968abba43f15cadd677aff" }
spl-math = "0.3.0"
spl-pod = "0.4.0"
arrayref = "0.3.6"
uint = "0.9.5"
bytemuck = { version = "1.18.0", features = ["derive"] }
bincode = "1.3.3"
zeroize = "1.0.0"

[dev-dependencies]
# Empty to avoid transitive conflicts

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
spl-discriminator = "0.4.1"
spl-type-length-value = { version = "0.7.0" }
spl-token-group-interface = { version = "0.2.4" }
spl-token-metadata-interface = { version = "0.3.4" }
spl-transfer-hook-interface = { version = "0.6.4" }
spl-tlv-account-resolution = { version = "=0.6.4" }
